--- a/templates/files.html
+++ b/templates/files.html
@@ -13,7 +13,6 @@
         <nav>
             <a href="/">Inicio</a>
             <a href="/files">Archivos Subidos</a>
-            <a href="#contacto">Contacto</a>
         </nav>
     </header>
     <section class="content">
@@ -41,7 +40,7 @@
         </ul>
     </section>
     <footer id="contacto">
-        <p>Creado por Nicolukaz © 2024</p>
+        <p>Creado por Nicolukazzz © 2024</p>
     </footer>
 </body>
 </html>
