--- a/templates/home.html
+++ b/templates/home.html
@@ -13,18 +13,17 @@
         <nav>
             <a href="/">Inicio</a>
             <a href="/files">Archivos Subidos</a>
-            <a href="#contacto">Contacto</a>
         </nav>
     </header>
     <section class="hero">
         <div class="hero-content">
-            <h1>Keylogger de Nicolukaz</h1>
+            <h1>Keylogger</h1>
             <p>Proyecto diseñado para monitorear la actividad del teclado.</p>
             <a href="/files" class="btn">Ir a Archivos Subidos</a>
         </div>
     </section>
     <footer id="contacto">
-        <p>Creado por Nicolukaz © 2024</p>
+        <p>Creado por Nicolukazzz © 2024</p>
     </footer>
 </body>
 </html>
